<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Rom Control</string>
    <string name="drawer_open" tools:ignore="MissingTranslation">Menu opened</string>
    <string name="drawer_close" tools:ignore="MissingTranslation">Menu closed</string>
    <string name="action_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="typhus_pixel_mods" tools:ignore="MissingTranslation">Typhus_ Pixel Mods</string>
    <string-array name="nav_drawer_items">
        <item>@string/statusbar_title</item>
        <item>@string/quicksettings_title</item>
        <item>@string/misc_title</item>
        <item>@string/themes_title</item>
        <item>@string/nav_bar_tuner_title</item>
        <item>@string/lockscreen_title</item>
        <item>@string/theme_chooser_dialog_title</item>
    </string-array>
    <string-array name="some_entries">
        <item>Right clock</item>
        <item>Center Clock</item>
        <item>Left Clock</item>
    </string-array>
    <string-array name="some_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string-array name="theme_items">
        <item>Dark theme</item>
        <item>Light theme</item>
        <item>Auto</item>
    </string-array>
    <string name="missing_su" tools:ignore="MissingTranslation">Your device is either not rooted or the app was denied root permissions.\n\nPlease check your root/su status and try again later.</string>
    <string name="exit" tools:ignore="MissingTranslation">Exit App</string>
    <string name="gaining_root" tools:ignore="MissingTranslation">Acquiring root access. Please wait...</string>
    <string name="missing_su_title" tools:ignore="MissingTranslation">Could not get root access</string>
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="theme_chooser_dialog_title" tools:ignore="MissingTranslation">Choose Theme</string>
    <string name="app_reboot_required_title" tools:ignore="MissingTranslation">App Reboot Required</string>
    <string name="app_reboot_required_message" tools:ignore="MissingTranslation">%1$s reboot is required for the changes to take effect.\n\nReboot now?</string>
    <string name="lockscreen_visualizer_color_title">Default color</string>
    <string name="lockscreen_visualizer_enable">Music visualizer</string>
    <string name="lockscreen_visualizer_enable_summary">Show visualizer bars while playing music</string>
    <string name="lockscreen_solid_fudge_factor_title">Sanity level</string>
    <string name="lockscreen_solid_lines_category">Solid Lines</string>
    <string name="lockscreen_solid_units_count_title">Lines count</string>
    <string name="lockscreen_solid_units_opacity_title">Lines opacity</string>
    <string name="lockscreen_autocolor_lavalamp">Requires lava lamp disabled</string>
    <string name="lockscreen_autocolor_summary">Sync color with lockscreen background</string>
    <string name="lockscreen_autocolor_title">Automatic color</string>
    <string name="lockscreen_lavalamp_speed_title">Color blend interval</string>
    <string name="lockscreen_lavalamp_summary">Use a smooth lava lamp style color blend animation</string>
    <string name="lockscreen_lavalamp_title">Lava lamp</string>
    <string name="ambient_visualizer_summary">Shows white visualization bars on ambient display unless custom color is selected</string>
    <string name="ambient_visualizer_title">Ambient visualizer</string>
    <string name="customize_visualizer">Customize visualizer</string>
    <string name="evolution_settings_title">The Evolver</string>
    <string name="aosp_gesture_title">AOSP Gestures</string>
    <string name="animation_title">Animations</string>
    <string name="buttons_title">Hardware buttons</string>
    <string name="dev_options_title">Developer options items</string>
    <string name="gestures_title">Gestures</string>
    <string name="hardware_keys_title">Hardware keys</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="navigation_title">Navigation</string>
    <string name="notifications_title">Notifications</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_items_title">Power menu items</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="statusbar_title">Status bar</string>
    <string name="statusbar_icons_title">Status bar icons</string>
    <string name="statusbar_items_categories_title">Status bar items categories</string>
    <string name="statusbar_network_icons_title">Status bar network icons</string>
    <string name="swipe_gestures_title">Swipe gestures</string>
    <string name="system_settings_title">System options</string>
    <string name="themes_title">Themes</string>
    <string name="torch_gestures_title">Torch gestures</string>
    <string name="volume_keys_title">Volume keys</string>
    <string name="aosp_gesture_summary">Stock gestures included with Android</string>
    <string name="animation_summary">Change the animation styles</string>
    <string name="buttons_summary">Tweak the actions of your physical buttons</string>
    <string name="gestures_summary">Gesture based options/actions</string>
    <string name="lockscreen_summary">Take control of your lockscreen items</string>
    <string name="misc_summary">Gaming mode and other system settings</string>
    <string name="navigation_summary">Customize navigation bar style and behavior</string>
    <string name="notifications_summary">Manage your notification settings</string>
    <string name="powermenu_summary">Configure your shutdown options</string>
    <string name="quicksettings_summary">Modify the QS panel layout and more</string>
    <string name="statusbar_summary">Personalize your status bar items</string>
    <string name="themes_summary">Pimp your device with awesome theme options</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="attention">Attention</string>
    <string name="default_string">Default</string>
    <string name="enable_first">Please enable first</string>
    <string name="led_color_green">Green</string>
    <string name="led_color_red">Red</string>
    <string name="edit_hint">Value</string>
    <string name="seek_value_edit_label">Set value</string>
    <string name="switch_bar_on">On</string>
    <string name="switch_bar_off">Off</string>
    <string name="dtts_category_title">Double tap to sleep</string>
    <string name="double_tap_to_sleep_title">Status bar</string>
    <string name="double_tap_to_sleep_summary">Double tap status bar to put the device to sleep</string>
    <string name="nav_bar_tuner_title">Navigation bar tuner</string>
    <string name="navigation_bar_invert_layout_title">Invert layout</string>
    <string name="navigation_bar_invert_layout_summary">Inverts the layout of the navigation bar and other items, such as the IME switcher</string>
    <string name="network_traffic_state_title">Location</string>
    <string name="network_traffic_autohide_threshold_title">Auto-hide threshold</string>
    <string name="network_traffic_hidearrow">Activity arrows</string>
    <string name="network_traffic_hidearrow_summary">Show the network traffic indicator arrows</string>
    <string name="network_traffic_refresh_interval_title">Refresh interval</string>
    <string name="network_traffic_type">Activity type</string>
    <string name="traffic_category">Network traffic</string>
    <string name="nettraf_font_size">Network traffic font size</string>
    <string name="show_lte_fourgee_title">Show 4G instead of LTE</string>
    <string name="show_lte_fourgee_summary">Replace LTE indicator with 4G</string>
    <string name="lockscreen_show_status_bar_title">Statusbar</string>
    <string name="powermenu_screenrecord">Screenrecord</string>
    <string name="status_bar_clock_show">Show clock and date</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_position">Date position</string>
    <string name="lockscreen_charging_animation_off">Off</string>
    <string name="corners_title">Rounded corners</string>
    <string name="battery_percent_title">Battery percent</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="left_battery_text_title">Left battery text</string>
    <string name="left_battery_text_summary">Put the battery text on left of battery icon</string>
    <string name="battery_percentage_title">Battery percentage options</string>
    <string name="more_line_text">Show more options\u2026</string>
    <string name="blur_quicksettings_title">Blur behind quick settings</string>
    <string name="qs_blur_intensity_title">Blur intensity</string>
    <string name="theme_customization_font_title">Headline / Body font</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar_no_navbar">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_charging_color">Battery bar charging color</string>
    <string name="battery_bar_battery_low_color">Battery bar low battery color</string>
    <string name="battery_bar_style_title">Battery bar alignment</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_use_charging_color">Custom charging color</string>
    <string name="battery_bar_blend_color_title">Blend colors</string>
    <string name="battery_bar_blend_color_summary">Blend full/empty colors corresponding to battery percentage</string>
    <string name="battery_bar_blend_color_reverse_title">Reverse color direction</string>
    <string name="battery_bar_blend_color_reverse_summary_off">Full &#8594; empty: red &#8592; green &#8592; blue &#8592; red</string>
    <string name="battery_bar_blend_color_reverse_summary_on">Full &#8594; empty: red &#8594; green &#8594; blue &#8594; red</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_date_title">Date settings</string>
    <string name="dt_styles">Dark theme style</string>
    <string name="reducekeyboard">Reduce gestures keyboard space</string>
    <string name="status_bar_height">Status bar height</string>
    <string name="fix_status_bar_padding">Correct left side padding</string>
    <string name="remove_navbar">Remove navigation bar</string>
    <string name="fix_center_clock_padding">Move center clock to the left</string>
    <string name="fix_center_clock_padding_right">Move center clock to the right</string>
    <string name="combine_signal_icons_title">Enable combined signal icons</string>
    <string name="dual_tone_battery_title">Enable dual tone battery meter</string>
    <string name="dual_tone_battery_on_summary">On (only works with portrait icon)</string>
    <string name="unread_messages_title">Show number of unread messages</string>
    <string name="back_gesture_height_title">Back gesture height configuration</string>
    <string name="signal_icons">Signal Icons Options</string>
</resources>