<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/dtts_category_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="double_tap_sleep_gesture"
            android:summaryOff="@string/double_tap_to_sleep_summary"
            android:summaryOn="@string/double_tap_to_sleep_summary"
            android:title="@string/double_tap_to_sleep_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/statusbar_icons_title" />
        <com.typhus.romcontrol.prefs.MyListPreference
            android:defaultValue="0"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:key="status_bar_battery_style"
            android:title="@string/status_bar_battery_style_title" />
        <PreferenceScreen android:title="@string/battery_percentage_title">
            <PreferenceCategory android:title="@string/battery_percentage_title">
                <com.typhus.romcontrol.prefs.MyListPreference
                    android:defaultValue="0"
                    android:entries="@array/battery_percent_entries"
                    android:entryValues="@array/battery_percent_values"
                    android:key="status_bar_show_battery_percent_vm"
                    android:title="@string/battery_percent_title" />
                <SwitchPreference
                    android:defaultValue="false"
                    android:key="do_left_battery_text"
                    android:summaryOff="@string/left_battery_text_summary"
                    android:summaryOn="@string/left_battery_text_summary"
                    android:title="@string/left_battery_text_title" />
            </PreferenceCategory>
        </PreferenceScreen>
        <SwitchPreference
            android:defaultValue="false"
            android:key="dual_tone_battery"
            android:summaryOff="@string/lockscreen_charging_animation_off"
            android:summaryOn="@string/dual_tone_battery_on_summary"
            android:title="@string/dual_tone_battery_title" />
        <PreferenceScreen
            android:title="@string/battery_bar_title">
            <PreferenceCategory android:title="@string/battery_bar_title">
                <com.typhus.romcontrol.prefs.MyListPreference
                    android:defaultValue="0"
                    android:entries="@array/battery_bar_no_navbar_entries"
                    android:entryValues="@array/battery_bar_no_navbar_values"
                    android:key="statusbar_battery_bar_no_navbar_list"
                    android:title="@string/battery_bar_no_navbar" />
                <!--#ffffffff-->
                <!-- -16711936 -->
                <com.typhus.romcontrol.prefs.ColorPickerPreference
                    alphaSlider="false"
                    hexValue="true"
                    android:defaultValue="0xffffffff"
                    android:key="statusbar_battery_bar_color"
                    android:title="@string/battery_bar_color" />
                <!--#ffff6600-->
                <!-- -39424 -->
                <com.typhus.romcontrol.prefs.ColorPickerPreference
                    alphaSlider="false"
                    hexValue="true"
                    android:defaultValue="0xffff6600"
                    android:key="statusbar_battery_bar_battery_low_color"
                    android:title="@string/battery_bar_battery_low_color" />
                <SwitchPreference
                    android:defaultValue="true"
                    android:key="statusbar_battery_bar_enable_charging_color"
                    android:title="@string/battery_bar_use_charging_color" />
                <!--#ff00ff00-->
                <!-- -16711936 -->
                <com.typhus.romcontrol.prefs.ColorPickerPreference
                    alphaSlider="false"
                    hexValue="true"
                    android:defaultValue="0xff00ff00"
                    android:key="statusbar_battery_bar_charging_color"
                    android:title="@string/battery_bar_charging_color"
                    android:dependency="statusbar_battery_bar_enable_charging_color" />
                <SwitchPreference
                    android:defaultValue="false"
                    android:key="statusbar_battery_bar_blend_color"
                    android:summaryOff="@string/battery_bar_blend_color_summary"
                    android:summaryOn="@string/battery_bar_blend_color_summary"
                    android:title="@string/battery_bar_blend_color_title" />
                <SwitchPreference
                    android:defaultValue="false"
                    android:key="statusbar_battery_bar_blend_color_reverse"
                    android:summaryOff="@string/battery_bar_blend_color_reverse_summary_off"
                    android:summaryOn="@string/battery_bar_blend_color_reverse_summary_on"
                    android:title="@string/battery_bar_blend_color_reverse_title"
                    android:dependency="statusbar_battery_bar_blend_color" />
                <com.typhus.romcontrol.prefs.MyListPreference
                    android:defaultValue="0"
                    android:entries="@array/battery_bar_style_entries"
                    android:entryValues="@array/battery_bar_style_values"
                    android:key="statusbar_battery_bar_style"
                    android:title="@string/battery_bar_style_title" />
                <com.typhus.romcontrol.prefs.SeekBarPreference
                    min="1"
                    units="dp"
                    android:defaultValue="1"
                    android:icon="@null"
                    android:key="statusbar_battery_bar_thickness"
                    android:max="4"
                    android:title="@string/battery_bar_thickness_title" />
                <SwitchPreference
                    android:defaultValue="false"
                    android:key="statusbar_battery_bar_animate"
                    android:title="@string/battery_bar_animate_title" />
                <!--
                <SwitchPreference
                    android:defaultValue="false"
                    android:key="battery_bar_use_gradient_color"
                    android:summaryOff="@string/sb_battery_bar_gradient_color_summary"
                    android:summaryOn="@string/sb_battery_bar_gradient_color_summary"
                    android:title="@string/sb_battery_bar_use_gradient_color" />
                -->
                <!--#ffff4400-->
                <!-- -48128 -->
                <!--
                <com.typhus.romcontrol.prefs.ColorPickerPreference
                    alphaSlider="false"
                    hexValue="true"
                    android:defaultValue="0xffff4400"
                    android:key="battery_bar_low_color"
                    android:title="@string/sb_battery_bar_low_color"
                    android:dependency="battery_bar_use_gradient_color"/>
                -->
                <!--#ff99cc00-->
                <!-- -6697984 -->
                <!--
                <com.typhus.romcontrol.prefs.ColorPickerPreference
                    alphaSlider="false"
                    hexValue="true"
                    android:defaultValue="0xff99cc00"
                    android:key="battery_bar_high_color"
                    android:title="@string/sb_battery_bar_high_color"
                    android:dependency="battery_bar_use_gradient_color"/>
                 -->
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/signal_icons">
            <PreferenceCategory android:title="@string/signal_icons">
                <SwitchPreference
                    android:defaultValue="false"
                    android:key="combine_signal_icons"
                    android:summaryOff="@string/lockscreen_charging_animation_off"
                    android:summaryOn="@string/switch_bar_on"
                    android:title="@string/combine_signal_icons_title" />
                <SwitchPreference
                    android:defaultValue="true"
                    android:key="show_fourg_icon"
                    android:summaryOff="@string/show_lte_fourgee_summary"
                    android:summaryOn="@string/show_lte_fourgee_summary"
                    android:title="@string/show_lte_fourgee_title" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/status_bar_clock_title">
            <PreferenceCategory android:title="@string/status_bar_clock_title">
                <SwitchPreference
                    android:defaultValue="true"
                    android:key="statusbar_clock"
                    android:title="@string/status_bar_clock_show" />
                <com.typhus.romcontrol.prefs.MyListPreference
                    android:defaultValue="0"
                    android:entries="@array/status_bar_clock_style_entries"
                    android:entryValues="@array/status_bar_clock_style_values"
                    android:key="statusbar_clock_style"
                    android:title="@string/status_bar_clock_style_title"
                    android:dependency="statusbar_clock" />
                <SwitchPreference
                    android:defaultValue="false"
                    android:key="center_clock_fix"
                    android:title="@string/fix_center_clock_padding"
                    android:dependency="statusbar_clock" />
                <SwitchPreference
                    android:defaultValue="false"
                    android:key="center_clock_rfix"
                    android:title="@string/fix_center_clock_padding_right"
                    android:dependency="statusbar_clock" />
                <com.typhus.romcontrol.prefs.MyListPreference
                    android:defaultValue="0"
                    android:entries="@array/status_bar_am_pm_entries"
                    android:entryValues="@array/status_bar_am_pm_values"
                    android:key="statusbar_am_pm"
                    android:title="@string/status_bar_am_pm_title"
                    android:dependency="statusbar_clock" />
                <SwitchPreference
                    android:defaultValue="false"
                    android:key="statusbar_clock_seconds"
                    android:title="@string/clock_seconds_display"
                    android:dependency="statusbar_clock" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/status_bar_date_title">
                <com.typhus.romcontrol.prefs.MyListPreference
                    android:defaultValue="0"
                    android:entries="@array/clock_date_display_entries"
                    android:entryValues="@array/clock_date_display_values"
                    android:key="clock_date_display"
                    android:title="@string/clock_date_display"
                    android:dependency="statusbar_clock" />
                <com.typhus.romcontrol.prefs.MyListPreference
                    android:defaultValue="0"
                    android:entries="@array/clock_date_style_entries"
                    android:entryValues="@array/clock_date_style_values"
                    android:key="clock_date_style"
                    android:title="@string/clock_date_style"
                    android:dependency="clock_date_display" />
                <com.typhus.romcontrol.prefs.MyListPreference
                    android:defaultValue="0"
                    android:entries="@array/clock_date_format_entries_values"
                    android:entryValues="@array/clock_date_format_entries_values"
                    android:key="statusbar_clock_date_format"
                    android:title="@string/clock_date_format"
                    android:dependency="clock_date_display" />
                <com.typhus.romcontrol.prefs.MyListPreference
                    android:defaultValue="0"
                    android:entries="@array/clock_date_position_entries"
                    android:entryValues="@array/clock_date_position_values"
                    android:key="statusbar_clock_date_position"
                    android:title="@string/clock_date_position"
                    android:dependency="clock_date_display" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
        android:title="@string/traffic_category">
        <PreferenceCategory android:title="@string/traffic_category">
            <com.typhus.romcontrol.prefs.MyListPreference
                android:defaultValue="0"
                android:entries="@array/network_traffic_location_entries"
                android:entryValues="@array/network_traffic_location_values"
                android:key="network_traffic_location"
                android:title="@string/network_traffic_state_title" />
            <com.typhus.romcontrol.prefs.MyListPreference
                android:defaultValue="0"
                android:entries="@array/show_network_traffic_type_entries"
                android:entryValues="@array/show_network_traffic_type_values"
                android:key="network_traffic_type"
                android:title="@string/network_traffic_type" />
            <com.typhus.romcontrol.prefs.SeekBarPreference
                min="0"
                units="KiB/s"
                android:defaultValue="1"
                android:icon="@null"
                android:key="network_traffic_autohide_threshold"
                android:max="10"
                android:title="@string/network_traffic_autohide_threshold_title"
                />
            <com.typhus.romcontrol.prefs.SeekBarPreference
                min="1"
                units="sec"
                android:defaultValue="2"
                android:icon="@null"
                android:key="network_traffic_refresh_interval"
                android:title="@string/network_traffic_refresh_interval_title"
                android:max="10"
                />
            <com.typhus.romcontrol.prefs.SeekBarPreference
                min="26"
                units="dp"
                android:defaultValue="36"
                android:icon="@null"
                android:key="network_traffic_font_size"
                android:title="@string/nettraf_font_size"
                android:max="46"
                />
            <SwitchPreference
                android:defaultValue="true"
                android:key="network_traffic_arrow"
                android:summaryOff="@string/network_traffic_hidearrow_summary"
                android:summaryOn="@string/network_traffic_hidearrow_summary"
                android:title="@string/network_traffic_hidearrow" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/more_line_text">
            <PreferenceCategory android:title="@string/lockscreen_show_status_bar_title">
                <SwitchPreference
                    android:defaultValue="false"
                    android:key="show_unread_messages_number"
                    android:summaryOff="@string/lockscreen_charging_animation_off"
                    android:summaryOn="@string/switch_bar_on"
                    android:title="@string/unread_messages_title" />
                <com.typhus.romcontrol.prefs.MyListPreference
                    android:defaultValue="0"
                    android:entries="@array/status_bar_height_entries"
                    android:entryValues="@array/status_bar_height_values"
                    android:key="status_bar_height"
                    android:title="@string/status_bar_height" />
                <SwitchPreference
                    android:defaultValue="false"
                    android:key="fix_sb_left_paddding"
                    android:summaryOff="@string/lockscreen_charging_animation_off"
                    android:summaryOn="@string/switch_bar_on"
                    android:title="@string/fix_status_bar_padding" />
            </PreferenceCategory>
        </PreferenceScreen>
</PreferenceScreen>