<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/nav_bar_tuner_title">
        <SwitchPreference
            android:defaultValue="false"
            android:key="remove_navbar"
            android:summaryOff="@string/lockscreen_charging_animation_off"
            android:summaryOn="@string/switch_bar_on"
            android:title="@string/remove_navbar" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="gestures_reduce_keyboard"
            android:summaryOff="@string/lockscreen_charging_animation_off"
            android:summaryOn="@string/switch_bar_on"
            android:title="@string/reducekeyboard" />
        <com.typhus.romcontrol.prefs.MyListPreference
            android:defaultValue="0"
            android:entries="@array/back_gesture_height_entries"
            android:entryValues="@array/back_gesture_height_values"
            android:key="back_gesture_height"
            android:title="@string/back_gesture_height_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="nav_bar_inverse"
            android:summaryOff="@string/navigation_bar_invert_layout_summary"
            android:summaryOn="@string/navigation_bar_invert_layout_summary"
            android:title="@string/navigation_bar_invert_layout_title" />
    </PreferenceCategory>
</PreferenceScreen>